added bootstrap & simple leaflet map

--- a/nodes/node/data/index.html
+++ b/nodes/node/data/index.html
@@ -11,10 +11,10 @@
 		<div id="content">
 			<form method="get" action="/get">
 				<h2>My Information</h2>
-				<input type="text" placeholder="Name" name="n" maxlength="20"/><br/>
-				<input type="text" placeholder="Short Address" name="add" maxlength="40"/><br/>
+				<input type="text" placeholder="Name" name="n" maxlength="30"/><br/>
+				<input type="text" placeholder="Short Address" name="add" maxlength="100"/><br/>
 				<input type="text" placeholder="Phone Number" name="hp" maxlength="12"/><br/>
-				<input type="number" placeholder="Number of occupants (incld. pets)" name="cnt" maxlength="2"/><br/>
+				<input type="number" placeholder="Number of occupants (incld. pets)" name="cnt" max="99" min="0"/><br/>
 
 				<h2>Current Status</h2>
 				<input type="checkbox" name="dg" value="1" id="rad-dan">
