--- a/nodes/node/data/index.html
+++ b/nodes/node/data/index.html
@@ -42,8 +42,8 @@
 							</div>
 							<div class="form-group pt-2">
 								<fieldset>
-									<label class="form-label" for="txtOccu">Number of Occupants</label><br/>
-									<input type="number" placeholder="Number of occupants (incld. pets)" name="cnt" max="99" min="0" id="txtOccu" required/><br/>
+									<label class="form-label" for="txtOccu">Number of Occupants </label><br/>
+									<input type="number" placeholder="Max 99, incld. pets" name="cnt" max="99" min="0" id="txtOccu" required/><br/>
 								</fieldset>
 							</div>
 						</div>
